--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div id="foto">
             <img id="imagem" src="manhã.jpg" alt="Amanhecendo">
         </div>
+        <div id="diaa"></div>
     </section>
     <footer>
         <a href="https://www.linkedin.com/in/hiago-henrique-gomes-a955a6188/" target="_blank">Desenvolvido por Hiago Henrique</a>
