--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <h1>Hora do Dia:</h1>
     </header>
     <section>
-        <div id="msg">
-           mensagem
-        </div>
+        <div id="msg"></div>
+        <div id="greetings"></div>
         <div id="foto">
             <img id="imagem" src="manhã.jpg" alt="Amanhecendo">
         </div>
